# csc_incompressible_fluids

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/FVMCode/: boundary_patch.h  exceptions.h  file_parser.h  file_parser_forward.h  geometry.h  input.h  mesh_components.h  output.h  point.h  unstructured_mesh.h
include/FVMCode/sparsity/: sparse_matrix.h  sparsity_pattern.h
mesh_1d/: faces  neighbour  owner  points
scripts/: CMakeLists.txt
scripts/convection_diffusion/: convection_diffusion.cc
scripts/convection_diffusion/constant/polyMesh/: boundary  faces  neighbour  owner  points
scripts/transient_laplacian/: plot.py  transient_laplacian.cc
scripts/transient_laplacian/constant/polyMesh/: boundary  neighbour  owner
src/: file_parser.cc  geometry.cc  input.cc  output.cc  unstructured_mesh.cc
src/sparsity/: sparse_matrix.cc  sparsity_pattern.cc
tests/: CMakeLists.txt  assert_test_01.cc  comment_skipping_01.cc  geometry_01.cc  geometry_02.cc  point_01.cc  point_02.cc  skip_foam_header_01.cc  sparsity_01.cc  test_driver.cc  test_helpers.h  test_helpers_01.cc  unstructured_mesh_01.cc  unstructured_mesh_02.cc  unstructured_mesh_03.cc  unstructured_mesh_04.cc
tests/comment_skipping_01/: input.txt
tests/input01/: boundary.txt  cell.txt  face.txt  point.txt
tests/mesh_1d/: boundary  faces  neighbour  owner  points
tests/skip_foam_header_01/: malformed
tests/unstructured_mesh_04/: boundary  faces  neighbour  owner  points
